# test

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.dev.md  README.md  vector_add.cpp
.github/: check-latest.sh
.github/workflows/: latest.yml
src/: vector_add.cpp
